{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Map",
            "id": "5fa9ed89-67ff-4b9e-8e0e-54346f4da6c3",
            "actions": [
                {
                    "name": "shop",
                    "type": "Button",
                    "id": "0e0b1853-a29f-441e-b3b9-2232f4aebb0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "options",
                    "type": "Button",
                    "id": "c37446f3-ec46-4bdc-8ffe-51feff9c9197",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "useTear",
                    "type": "Button",
                    "id": "9db6abd8-84c9-4797-912f-428f98f81a96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "useBlade",
                    "type": "Button",
                    "id": "13909d04-7380-491d-ba0d-ac9bfc9a1a65",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "useRing",
                    "type": "Button",
                    "id": "6c5a36c1-a2f9-4371-8fae-563eae613853",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "usePrism",
                    "type": "Button",
                    "id": "99fe0711-2f23-456f-855b-4ba038ebe2bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectWater",
                    "type": "Button",
                    "id": "f21743b9-66c4-48e9-97ac-dffa54fa642b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectFire",
                    "type": "Button",
                    "id": "2886c424-6568-4701-90fe-c4689ed086ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectAir",
                    "type": "Button",
                    "id": "ada169fe-2af9-4232-8ad0-486db65dc361",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "selectEarth",
                    "type": "Button",
                    "id": "e7af39ca-d3eb-47db-ac13-4b3467f89510",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "upgradeHealth",
                    "type": "Button",
                    "id": "7e070df1-2e76-4a5a-ae97-6062e37f94f8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "upgradeAttack",
                    "type": "Button",
                    "id": "c1758af0-674e-4fe0-85d4-ee3ece10697e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "upgradeFortune",
                    "type": "Button",
                    "id": "43e0b24f-b41d-4733-b770-dff8214d7f6b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "useSkill",
                    "type": "Button",
                    "id": "b5857a39-1aea-4eee-b3db-dddfd26f7e6c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "upgradeSkill",
                    "type": "Button",
                    "id": "e885a486-004b-4676-b70f-cd80c7f51147",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "120d1e07-0747-4360-a1be-08a3f878391f",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "shop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb6d82ad-a219-40fe-96ae-95dabd95913e",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "options",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5e3a9cd4-ce17-4e8c-9612-eec5d38bf4f0",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "useTear",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2dbda12a-6b21-460b-95c7-663cc21baad6",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "useBlade",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b24e09f4-adea-4e9b-bc78-be9ad822356d",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "useRing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3cd688f-1a52-4d03-a8c4-c1ea00d33a3a",
                    "path": "<Keyboard>/v",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "usePrism",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8709adcd-14a7-4717-b29e-8c9b602cec8a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "selectWater",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "532156ae-5655-454a-8052-3b59e106bbe8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "selectFire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d5ed9d2-0a0b-413b-a9af-22de5ef75c10",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "selectAir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1f92ca5-31e7-449d-9028-3694fb10695a",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "selectEarth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d4e97572-f376-437f-abbb-7f06b0f3da98",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "upgradeHealth",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9f43f27-7688-427d-8111-b85d9fb3d12f",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "upgradeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b60548c9-922d-4231-a044-910439729fe1",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "upgradeFortune",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f32b2f73-c837-4c14-a9e5-9af891ba3f45",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "useSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fe4647ac-c98d-4fee-ab84-b17b9a154b1a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "upgradeSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}